-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P1
-
Affects Version/s: 9
-
Component/s: hotspot
-
b120
-
Verified
Fix for 8154153: PS: Restore preserved marks in parallel
adds dependency of vm/gc/shared/preservedMarks.* on "gc/parallel/gcTaskManager.hpp"
It is not compile when minimal VM is used.
adds dependency of vm/gc/shared/preservedMarks.* on "gc/parallel/gcTaskManager.hpp"
It is not compile when minimal VM is used.
- relates to
-
JDK-8156032 Clean up parallel GC specific code from vm/gc/shared/preservedMarks.cpp
-
- Resolved
-