8155946: Minimal VM fails to built after 8154153: PS: Restore preserved marks in parallel

Reviewed-by: stefank